<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_pg"
    android:orientation="vertical">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/fragment_donation_order_ET_name"
                style="@style/et_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_et_h"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/fragment_donation_order_ET_age"
                style="@style/et_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_et_h"
                android:hint="@string/age" />

            <Spinner
                android:id="@+id/fragment_donation_order_sp_bloodType"
                style="@style/et_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_et_h"
                android:hint="@string/blood_type" />

            <EditText
                android:id="@+id/fragment_donation_order_ET_numbers"
                style="@style/et_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_et_h"
                android:hint="@string/numbers" />


            <EditText
                android:id="@+id/fragment_donation_order_ET_hosbital_name"
                style="@style/et_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_et_h"
                android:hint="@string/hospitalName" />

            <LinearLayout
                android:id="@+id/fragment_donation_order_ll"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_et_h"
                android:layout_marginStart="@dimen/dim_8"
                android:layout_marginTop="@dimen/dim_8"
                android:layout_marginEnd="@dimen/dim_8"
                android:layout_marginBottom="@dimen/dim_8"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/fragment_donation_order_ET_hospital_adress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/shape_et"
                    android:textColorHint="@color/black" />

                <Button
                    android:id="@+id/fragment_donation_order_btn_location"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dim_8"
                    android:background="@drawable/shape_et" />

            </LinearLayout>


            <Spinner
                android:id="@+id/fragment_donation_order_sp_gavernment"
                style="@style/et_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_et_h"
                android:hint="@string/gavernment" />

            <Spinner
                android:id="@+id/fragment_donation_order_sp_city"
                style="@style/et_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_et_h"
                android:hint="@string/city" />

            <EditText
                android:id="@+id/fragment_donation_order_ET_pone"
                style="@style/et_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_et_h"
                android:hint="@string/phone" />

            <EditText
                android:id="@+id/fragment_donation_order_ET_notes"
                style="@style/et_style"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_above="@+id/fragment_donation_ordert_BT_send_order"
                android:hint="@string/notes" />

            <Button
                android:id="@+id/fragment_donation_ordert_BT_send_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_8"
                android:layout_marginTop="@dimen/dim_8"
                android:layout_marginEnd="@dimen/dim_8"
                android:layout_marginBottom="@dimen/dim_8"
                android:background="@color/colorPrimaryDark"
                android:text="@string/sendOrder"
                android:textColor="@color/text_white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>