<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_pg">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fragment_forget_password_TX_forget"
        style="@style/iv_style"/>

    <TextView
        android:id="@+id/fragment_forget_password_TX_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/fragment_chang_pass_ET_pin_code"
        android:text="@string/forget_password"
        style="@style/tv_style"
        />

    <EditText
        android:id="@+id/fragment_chang_pass_ET_pin_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_et_h"
        android:layout_centerInParent="true"
        android:hint="@string/pin_code"
        style="@style/et_style" />

    <EditText
        android:id="@+id/fragment_chang_pass_ET_NewPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_et_h"
        android:layout_below="@id/fragment_chang_pass_ET_pin_code"
        android:hint="@string/password"
        style="@style/et_style" />

    <EditText
        android:id="@+id/fragment_chang_pass_ET_verify_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_et_h"
        android:layout_below="@id/fragment_chang_pass_ET_NewPassword"
        android:layout_centerInParent="true"
        android:hint="@string/verefiy_password"
        style="@style/et_style"/>

    <EditText
        android:id="@+id/fragment_chang_pass_ET_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_et_h"
        android:layout_below="@id/fragment_chang_pass_ET_verify_password"
        android:hint="@string/phone"
        style="@style/et_style"/>


    <Button
        android:id="@+id/fragment_chang_pass_BT_changPassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_chang_pass_ET_phone"
        style="@style/bt_style"
        android:text="chang password" />


</RelativeLayout>