<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_pg">

    <ImageView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fragment_forget_password_TX_forget"
        android:gravity="center"
        style="@style/iv_style"/>

    <TextView
        android:id="@+id/fragment_forget_password_TX_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/fragment_forget_password_ET_phone_number"
        android:text="@string/forget_password"
        style="@style/tv_style"
     />

    <EditText
        android:id="@+id/fragment_forget_password_ET_phone_number"
        style="@style/et_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_et_h"
        android:hint="@string/phone"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/fragment_login_BT_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_forget_password_ET_phone_number"
        android:text="@string/send"
        style="@style/bt_style"/>


</RelativeLayout>