<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


     <ImageView
          style="@style/iv_style"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_above="@id/fragment_connect_us_et_phone"
        />

    <EditText
        android:id="@+id/fragment_connect_us_et_phone"
        android:layout_above="@id/fragment_connect_us_et_email"
        android:layout_width="match_parent"
        style="@style/et_style"
        android:layout_height="@dimen/dim_et_h"
        android:hint="@string/phone"/>

    <EditText
        android:id="@+id/fragment_connect_us_et_email"
        android:layout_above="@id/fragment_connect_us_ll_linear"
        android:layout_width="match_parent"
        style="@style/et_style"
        android:layout_marginBottom="@dimen/dim_16"
        android:layout_height="@dimen/dim_et_h"
        android:hint="@string/email"/>

    <LinearLayout
        android:id="@+id/fragment_connect_us_ll_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/dim_8"
        android:layout_marginEnd="@dimen/dim_8"
        android:layout_marginBottom="@dimen/dim_16"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fragment_connect_us_iv_google"
            android:layout_width="@dimen/dim_45"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/dim_8"
            android:src="@drawable/google_icon" />

        <ImageView
            android:id="@+id/fragment_connect_us_iv_whats"
            android:layout_width="@dimen/dim_45"
            android:layout_height="@dimen/dim_45"
            android:layout_marginEnd="@dimen/dim_8"
            android:src="@drawable/wat_icon"/>

        <ImageView
            android:id="@+id/fragment_connect_us_iv_insta"
            android:layout_width="@dimen/dim_45"
            android:layout_height="@dimen/dim_45"
            android:layout_marginEnd="@dimen/dim_8"
            android:src="@drawable/insta_icon"/>

        <ImageView
            android:id="@+id/fragment_connect_us_iv_youyube"
            android:layout_width="@dimen/dim_45"
            android:layout_height="@dimen/dim_45"
            android:src="@drawable/youtube_icon"
            android:layout_marginEnd="@dimen/dim_8"/>

        <ImageView
            android:id="@+id/fragment_connect_us_iv_tweter"
            android:layout_width="@dimen/dim_45"
            android:layout_height="@dimen/dim_45"
            android:src="@drawable/tweter_icon"
            android:layout_marginEnd="@dimen/dim_8"/>

        <ImageView
            android:id="@+id/fragment_connect_us_iv_face"
            android:layout_width="@dimen/dim_45"
            android:layout_height="@dimen/dim_45"
            android:src="@drawable/face_icon"/>


    </LinearLayout>

    <TextView
        android:id="@+id/fragment_connect_us_tv_text"
        android:layout_below="@id/fragment_connect_us_ll_linear"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_et_h"
        android:background="@color/colorPrimaryDark"
        android:text="connact us"
        android:textColor="@color/text_white"
        android:textAlignment="center"
        android:gravity="center"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/fragment_connect_us_et_massege_titel"
        android:layout_below="@id/fragment_connect_us_tv_text"
        android:layout_width="match_parent"
        style="@style/et_style"
        android:layout_height="@dimen/dim_et_h"
        android:hint="@string/masseg_titel"/>
    <EditText

    android:id="@+id/fragment_connect_us_et_massege_content"
    android:layout_below="@id/fragment_connect_us_et_massege_titel"
    android:layout_width="match_parent"
    style="@style/et_style"
    android:layout_height="@dimen/dim_100"
    android:hint="@string/massege_content" />

    <Button
        android:id="@+id/fragment_connect_us_btn_send"
        android:layout_below="@id/fragment_connect_us_et_massege_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/bt_style_blue"
        android:text="@string/send"/>


</RelativeLayout>